Bug 513637 - keyboard repeat not working in Brave Browser
Summary: keyboard repeat not working in Brave Browser
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.4
Platform: CachyOS Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-21 08:15 UTC by hide.exclaim358
Modified: 2026-01-09 21:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hide.exclaim358 2025-12-21 08:15:48 UTC
SUMMARY
Keyboard repeat is not working in Brave browser when using KWIN WM. If I use other WM, keyboard repeat works perfectly in Brave Browser. No keyboard accessibility function is turned on in the keyboard settings.

STEPS TO REPRODUCE
1. Use KWIN WM.
2. Open Brave browser. 
3. Hold a key to repeat

OBSERVED RESULT
Keyboard repeat is not working

EXPECTED RESULT
The pressed key should repeat and show as many letter as possible until key press is removed.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  CachyOS 6.18.2-1
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.5.4 
Qt Version: 6

ADDITIONAL INFORMATION: 

This bug occurs in multiple distros if they have KWIN WM. Other WM fixes the problem.
Comment 1 Nate Graham 2025-12-22 21:37:48 UTC
Are they using KGlobalAccel for stuff? That would be strange.
Comment 2 Nicolas Fella 2025-12-23 10:29:38 UTC
(In reply to Nate Graham from comment #1)
> Are they using KGlobalAccel for stuff? That would be strange.

No, it's unrelated to global shortcuts
Comment 4 Nicolas Fella 2026-01-08 15:45:32 UTC
Git commit fdd3f4104070416457d9a52c9fa789796259847f by Nicolas Fella.
Committed on 08/01/2026 at 14:35.
Pushed by zamundaaa into branch 'master'.

Handle key repeat state from input method keys

M  +10   -10   src/inputmethod.cpp
M  +4    -3    src/inputmethod.h
M  +24   -3    src/wayland/inputmethod_v1.cpp
M  +2    -2    src/wayland/inputmethod_v1.h

https://invent.kde.org/plasma/kwin/-/commit/fdd3f4104070416457d9a52c9fa789796259847f
Comment 5 Nicolas Fella 2026-01-09 14:20:48 UTC
Git commit 62e56540a3060f072c81df04dcbbff4d51ace9bb by Nicolas Fella.
Committed on 09/01/2026 at 13:24.
Pushed by nicolasfella into branch 'Plasma/6.5'.

Handle key repeat state from input method keys
(cherry picked from commit fdd3f4104070416457d9a52c9fa789796259847f)

M  +9    -15   src/inputmethod.cpp
M  +4    -3    src/inputmethod.h
M  +24   -3    src/wayland/inputmethod_v1.cpp
M  +2    -2    src/wayland/inputmethod_v1.h

https://invent.kde.org/plasma/kwin/-/commit/62e56540a3060f072c81df04dcbbff4d51ace9bb