Handle key repeat state from input method keys

BUG: 513637
(cherry picked from commit fdd3f4104070416457d9a52c9fa789796259847f)